#+title:  Change Log
#+description:  All notable changes to this project will be documented in this file.

* Unreleased

** Added
- Example of using =ring-nexus-middleware= with reitit and a datomic db

* 2025.07.18

** Added
- Support for single arity request handlers

** Changed
- Some of the test to the 1-arity handler

* 2025.07.17

** Changed
- *BREAKING*: Changed the default keyword for adding state snapshot on the req map from =:ring-nexus/state= to =:nexus/state=.

* 2025.07.16

** Added
- Make =wrap-nexus= bypass requests that don't return actions a.k.a normal ring maps
- Added tests for normal ring requests bypass

* 2025.07.15

** Added
- =wrap-nexus= now adds a state snapshot resulting from =nexus/system->state= to the ring request
- Support for different state key